--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,6 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
-    compile files('libs/javacpp.jar')
-    compile files('libs/javacv.jar')
 }
