--- a/camerafilterlib/build.gradle
+++ b/camerafilterlib/build.gradle
@@ -1,11 +1,10 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 22
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "org.wysaid.filtervideocamera"
         minSdkVersion 15
         targetSdkVersion 22
         versionCode 1
@@ -22,5 +21,6 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.2.0'
-    compile project(':camerafilterlib')
+    compile files('libs/javacpp.jar')
+    compile files('libs/javacv.jar')
 }
