--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".CameraDemoActivity"
+            android:label="@string/app_name" >
+        </activity>
+
+        <activity
+            android:name=".VideoPlayerActivity"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
